--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,1 +1,37 @@
-halo
+<% if user_signed_in? %>
+  <%= link_to 'Nový hráč', new_player_path, class: 'btn btn-sm btn-success my-1' %>
+<% end %>
+<% if @players.any? %>
+  <div class="table-responsive my-1">
+    <table class="table table-sm">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Meno</th>
+          <th scope="col">Kategória</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @players.each do |player| %>
+          <tr>
+            <td><%= PlayerDecorator.new(player).name %></td>
+            <td><span class="badge badge-pill badge-light"><%= player.category.name %></span></td>
+            <td>
+              <%= link_to 'Detail', player_path(player), class: 'btn btn-sm btn-success' %>
+              <% if user_signed_in? %>
+                <%= link_to 'Upraviť', edit_player_path(player), class: 'btn btn-sm btn-success' %>
+                <%= link_to 'Odstrániť', player_path(player), method: :delete, data: { confirm: "Tento hráč bude zmazaný." }, class: 'btn btn-sm btn-danger' %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+<% else %>
+  <div class="row">
+    <div class="col">
+      <p class="lead text-center">Žiadni hráči.</p>
+    </div>
+  </div>
+<% end %>
