Changed contact info

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,11 +3,17 @@
     <div class="col-xs-12 col-md-6">
       <div class="mt-1 py-4">
         <p class="text-center">
-          Kontakt / Objednávky
+          Viac info
         </p>
         <p class="text-center">
-    			Ondrej Babala, Anika Babalová<br>
-          0911 503 355
+          <small>
+      			Ondrej Babala<br>
+            Milan Kyseľ<br>
+            Andrej Golej
+          </small>
+        </p>
+        <p class="text-center">
+          0908 304 473
     		</p>
       </div>
     </div>
