--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,9 @@
             <%= link_to 'Kategórie', categories_path, class: 'nav-link'  %>
           </li>
         <% end %>
+        <li class="nav-item">
+          <%= link_to 'O súťaži', pages_about_path, class: 'nav-link'  %>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <% if user_signed_in? %>
