Clickable phone numbers

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -73,9 +73,9 @@
 <hr>
 <h4>Viac info a prihlásenie:</h4>
 <p class="text-center">
-  <%= link_to root_url, root_url %><br>
-  <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %><br>
-  Ondrej Babala ● <strong>0908 304 473</strong><br>
+  Ondrej Babala ● <strong><%= link_to '0908 304 473', 'tel:0908304473'%></strong><br>
   Milan Kyseľ<br>
-  Andrej Golej
+  Andrej Golej<br>
+  <%= link_to root_url, root_url %><br>
+  <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
 </p>
