--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -28,3 +28,8 @@
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col">
+    <p>Registrácia <%= @player.created_at.to_formatted_s(:short) %></p>
+  </div>
+</div>
