--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
           </small>
         </p>
         <p class="text-center">
-          0908 304 473
+          <%= link_to '0908 304 473', 'tel:0908304473' %>
     		</p>
       </div>
     </div>
@@ -26,7 +26,7 @@
           <small>
             Tomáš Radič<br>
             <%= link_to 'tomas.radic@gmail.com', 'mailto:tomas.radic@gmail.com' %><br>
-            0905 289 248
+            <%= link_to '0905 289 248', 'tel:0905289248' %>
           </small>
         </p>
     		<p class="text-center">
