--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,8 +8,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to 'Kategórie', categories_path, class: 'nav-link'  %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Administrácia
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to 'Sezóny', seasons_path, class: 'dropdown-item' %>
+              <%= link_to 'Kolá', rounds_path, class: 'dropdown-item' %>
+              <%= link_to 'Kategórie', categories_path, class: 'dropdown-item'  %>
+            </div>
           </li>
         <% end %>
         <li class="nav-item">
