--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -31,9 +31,11 @@
       <div class="tab-pane fade" id="pending" role="tabpanel" aria-labelledby="pending-tab">
         <%= render 'table', matches: @pending_matches %>
       </div>
-      <div class="tab-pane fade" id="draft" role="tabpanel" aria-labelledby="draft-tab">
-        <%= render 'table', matches: @draft_matches %>
-      </div>
+      <% if user_signed_in? %>
+        <div class="tab-pane fade" id="draft" role="tabpanel" aria-labelledby="draft-tab">
+          <%= render 'table', matches: @draft_matches %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
