--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -3,10 +3,12 @@
 <div class="row">
   <div class="col">
     <h1 class="float-left"><%= PlayerDecorator.new(@player).name %></h1>
-    <% if user_signed_in? %>
-      <%= link_to 'Upraviť', edit_player_path(@player), class: 'btn btn-success my-1 float-right' %>
-    <% end %>
-    <%= link_to 'Naspäť', players_path, class: 'btn btn-outline-success my-1 float-right' %>
+    <div class="float-right">
+      <% if user_signed_in? %>
+        <%= link_to 'Upraviť', edit_player_path(@player), class: 'btn btn-success my-1' %>
+      <% end %>
+      <%= link_to 'Naspäť', players_path, class: 'btn btn-outline-success my-1' %>
+    </div>
   </div>
 </div>
 
