--- a/app/views/rounds/_form.html.erb
+++ b/app/views/rounds/_form.html.erb
@@ -1,14 +1,6 @@
 <%= form_with(model: round, local: true) do |form| %>
 
   <div class="row">
-    <div class="col">
-      <div class="field form-group">
-        <%= form.label :label, 'Označenie' %><br />
-        <%= form.text_field :label, autofocus: true, class: 'form-control' %>
-      </div>
-    </div>
-  </div>
-  <div class="row">
     <div class="col-lg-6">
       <div class="field form-group">
         <%= form.label :period_begins, 'Začiatok' %><br />
@@ -19,6 +11,14 @@
       <div class="field form-group">
         <%= form.label :period_ends, 'Koniec' %><br />
         <%= form.date_field :period_ends, class: 'form-control' %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="field form-group">
+        <%= form.label :label, 'Označenie' %><br />
+        <%= form.text_field :label, class: 'form-control' %>
       </div>
     </div>
   </div>
