--- a/app/views/rounds/_form.html.erb
+++ b/app/views/rounds/_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_with(model: round, local: true) do |form| %>
 
+  <%= form.hidden_field :season_id %>
+
   <div class="row">
     <div class="col-lg-6">
       <div class="field form-group">
