--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -26,10 +26,10 @@
     </ul>
     <div class="tab-content" id="tab-matches-content">
       <div class="tab-pane fade show active" id="finished" role="tabpanel" aria-labelledby="finished-tab">
-        <%= render 'table', matches: @finished_matches %>
+        <%= render 'table', matches: @published_matches.finished.includes(:winner) %>
       </div>
       <div class="tab-pane fade" id="pending" role="tabpanel" aria-labelledby="pending-tab">
-        <%= render 'table', matches: @pending_matches %>
+        <%= render 'table', matches: @published_matches.pending %>
       </div>
       <% if user_signed_in? %>
         <div class="tab-pane fade" id="draft" role="tabpanel" aria-labelledby="draft-tab">
