Match show and create actions

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -42,6 +42,11 @@
   box-shadow: 10px 10px 30px -25px rgba(0,0,0,0.75);
 }
 
+p.lead .bagge-pill-wider {
+  padding: 0.7em 1.6em;
+  border-radius: 0.3rem;
+}
+
 //
 // Tables
 
