--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row">
   <div class="col">
-    <h1 class="float-left"><%= PlayerDecorator.new(@player).name %></h1>
+    <h1 class="float-left"><%= @player.name %></h1>
     <div class="float-right">
       <% if user_signed_in? %>
         <%= link_to 'Upraviť', edit_player_path(@player), class: 'btn btn-success my-1' %>
