Update and destroy matches functionality added

--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,6 +1,45 @@
-<h1>Editing Match</h1>
+<div class="row">
+  <div class="col-md-3 hidden-sm-down"></div>
+  <div class="col">
+    <h2><%= MatchDecorator.new(@match).label %></h2>
+    <hr>
 
-<%= render 'form', match: @match %>
+    <%= form_with(model: @match, local: true) do |form| %>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="form-group">
+            <%= form.label :play_date, 'Dátum zápasu' %><br />
+            <%= form.date_field :play_date, class: 'form-control' %>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="custom-control custom-checkbox">
+            <br><br>
+            <%= form.check_box :published, class: 'custom-control-input' %>
+            <%= form.label :published, 'Zápas je zverejnený', class: 'custom-control-label' %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <%= form.label :note, 'Poznámka' %>
+            <%= form.text_area :note, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
 
-<%= link_to 'Show', @match %> |
-<%= link_to 'Back', matches_path %>
+      <%= form.hidden_field :round_id %>
+
+      <div class="row">
+        <div class="col">
+          <div class="actions">
+            <%= submit_tag 'Potvrdiť', class: 'btn btn-lg btn-success my-1' %>
+            <%= link_to 'Zrušiť', round_path(@match.round), class: 'btn btn-lg btn-outline-success my-1' %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <div class="col-md-3 hidden-sm-down"></div>
+</div>
