--- a/app/views/rounds/_form.html.erb
+++ b/app/views/rounds/_form.html.erb
@@ -21,6 +21,9 @@
       <div class="field form-group">
         <%= form.label :label, 'Označenie' %><br />
         <%= form.text_field :label, class: 'form-control' %>
+        <small class="font-italic font-weight-light">
+          Označenie stačí iba pre niečim významné kolá, napr. "finále"
+        </small>
       </div>
     </div>
   </div>
