--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -20,33 +20,8 @@
   </div>
 <% end %>
 
-<div class="row">
-  <div class="col">
-    <ul class="nav nav-tabs" id="tab-matches" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="finished-tab" data-toggle="tab" href="#finished" role="tab" aria-controls="finished" aria-selected="true">Odohraté</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pending-tab" data-toggle="tab" href="#pending" role="tab" aria-controls="pending" aria-selected="false">Naplánované</a>
-      </li>
-      <% if user_signed_in? %>
-        <li class="nav-item">
-          <a class="nav-link" id="draft-tab" data-toggle="tab" href="#draft" role="tab" aria-controls="draft" aria-selected="false">Nezverejnené</a>
-        </li>
-      <% end %>
-    </ul>
-    <div class="tab-content" id="tab-matches-content">
-      <div class="tab-pane fade show active" id="finished" role="tabpanel" aria-labelledby="finished-tab">
-        <%= render 'table', matches: @published_matches.finished.includes(:winner) %>
-      </div>
-      <div class="tab-pane fade" id="pending" role="tabpanel" aria-labelledby="pending-tab">
-        <%= render 'table', matches: @published_matches.pending %>
-      </div>
-      <% if user_signed_in? %>
-        <div class="tab-pane fade" id="draft" role="tabpanel" aria-labelledby="draft-tab">
-          <%= render 'table', matches: @draft_matches %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<% if user_signed_in? %>
+  <%= render 'list_admin' %>
+<% else %>
+  <%= render 'list_public' %>
+<% end %>
