--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,6 +1,12 @@
 <div class="row">
   <div class="col">
+    <%# unless user_signed_in? %>
+      <!-- <span class="float-left">(kurt)</span> -->
+    <%# end %>
     <h1 class="float-left"><%= MatchDecorator.new(@match).label %></h1>
+    <%# unless user_signed_in? %>
+      <!-- <span class="float-left">(lopty)</span> -->
+    <%# end %>
     <div class="float-right">
       <%= link_to 'Naspäť', matches_path(round_id: @match.round_id), class: 'btn btn-outline-success my-1' %>
       <% if policy(@match).update? %>
@@ -27,6 +33,8 @@
 <hr>
 
 <p class="lead text-center"><%= round_element(@match.round, current_user) %></p>
+<p class="lead text-center"><%= @match.player1.name %> zabezpečuje kurt</p>
+<p class="lead text-center"><%= @match.player2.name %> zabezpečuje lopty</p>
 <p class="lead text-center"><%= @match.play_date&.to_formatted_s(:short) || content_tag(:i) { 'žiadny dátum' } %></p>
 <p class="lead text-center"><%= @match.note.presence || content_tag(:i) { 'žiadna poznámka' } %></p>
 
