--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -33,8 +33,18 @@
 <hr>
 
 <p class="lead text-center"><%= round_element(@match.round, current_user) %></p>
-<p class="lead text-center"><%= @match.player1.name %> zabezpečuje kurt</p>
-<p class="lead text-center"><%= @match.player2.name %> zabezpečuje lopty</p>
+<hr>
+<p class="lead text-center">
+  <%= @match.player1.name %>
+  <i><%= link_to "(#{@match.player1.phone})", "tel:#{@match.player1.phone}" %></i>
+  <b>zabezpečuje <i>kurt</i></b>.
+</p>
+<p class="lead text-center">
+  <%= @match.player2.name %>
+  <i><%= link_to "(#{@match.player2.phone})", "tel:#{@match.player2.phone}" %></i>
+  <b>zabezpečuje <i>lopty</i></b>.
+</p>
+<hr>
 <p class="lead text-center"><%= @match.play_date&.to_formatted_s(:short) || content_tag(:i) { 'žiadny dátum' } %></p>
 <p class="lead text-center"><%= @match.note.presence || content_tag(:i) { 'žiadna poznámka' } %></p>
 
