--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -14,8 +14,18 @@
         <% matches.each do |match| %>
           <% next if !user_signed_in? && (match.player1.dummy? || match.player2.dummy?) %>
           <tr>
-            <td><%= match.player1.name %></td>
-            <td><%= match.player2.name %></td>
+            <td>
+              <%= match.player1.name %><br>
+              <small>
+                <i>(tel.č. <%= link_to "#{match.player1.phone}", "tel:#{match.player1.phone}" %>)</i>
+              </small>
+            </td>
+            <td>
+              <%= match.player2.name %><br>
+              <small>
+                <i>(tel.č. <%= link_to "#{match.player2.phone}", "tel:#{match.player2.phone}" %>)</i>
+              </small>
+            </td>
             <td><%= match.note %></td>
             <td><%= MatchDecorator.new(match).score %></td>
             <td>
